Adapt run script to modern Java